fix(web): address code review feedback on PR #21
- Guard selection listener against null cascadeHandler (defensive,
  constructor ordering guarantee, but makes intent explicit)
- Add Javadoc to CascadeSelectionHandler.updateParentState explaining
  the same-recipe-same-recipeList assumption for multi-position parents
- Replace Collectors.toList() with Stream.toList() in RecipeFilter
- Add comment for zip64=true explaining the entry limit reason
- Add comment in software_verification_cases.yml explaining cases:[]
- Remove stale PLAN.md (superseded by PR description + OpenSpec artifacts)